--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "babel src --out-dir lib",
+    "build-example": "webpack --config example/webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,8 +28,10 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.1",
+    "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "eslint": "^3.19.0",
-    "git-hooks": "^1.1.8"
+    "git-hooks": "^1.1.8",
+    "webpack": "^2.3.3"
   }
 }
