Generate language file template in build.

--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,9 @@
     "presets": [
       "es2015"
     ],
-    "plugins": [],
+    "plugins": [
+      "transform-object-assign"
+    ],
     "ignore": [
       "src/**/*.json"
     ]
